Dashboard view + Customer main view + Market Main view + Connection with backend + Images + fragment view

--- a/neo-app.json
+++ b/neo-app.json
@@ -18,6 +18,14 @@
         "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+        "path": "/webapp/offmarketstartupweekend",
+        "target": {
+                "type": "destination",
+                "name": "offmarketstartupweekend"
+        },
+        "description": "Back End URL"
     }
   ],
   "sendWelcomeFileRedirect": true
