--- a/neo-app.json
+++ b/neo-app.json
@@ -20,13 +20,29 @@
       "description": "SAPUI5 Test Resources"
     },
     {
-        "path": "/webapp/offmarketstartupweekend",
-        "target": {
-                "type": "destination",
-                "name": "offmarketstartupweekend"
-        },
-        "description": "Back End URL"
+      "path": "/webapp/offmarketstartupweekend",
+      "target": {
+        "type": "destination",
+        "name": "offmarketstartupweekend"
+      },
+      "description": "Back End URL"
     }
   ],
-  "sendWelcomeFileRedirect": true
+  "sendWelcomeFileRedirect": true,
+  "cacheControl": [
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "**.html"
+    },
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "sap-ui-cachebuster-info.json"
+    },
+    {
+      "directive": "public",
+      "maxAge": 31536000
+    }
+  ]
 }
